--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -31,6 +31,8 @@
     <link href="{% static 'assets/css/variables.css' %}" rel="stylesheet">
     <link href="{% static 'assets/css/main.css' %}" rel="stylesheet">
 
+    {% block base_css %}{% endblock %}
+
     <!-- =======================================================
     * Template Name: ArthPatel
 
@@ -60,6 +62,12 @@
                         {% for row in categories %}
                         <li><a href="#">{{ row.name }}</a></li>
                         {% endfor %}
+                    </ul>
+                </li>
+                <li class="dropdown"><a href="#"><span>Tools</span> <i
+                        class="bi bi-chevron-down dropdown-indicator"></i></a>
+                    <ul>
+                        <li><a href="{% url 'text_to_speech' %}">Text to Speech</a></li>
                     </ul>
                 </li>
 
