--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -2,11 +2,11 @@
 
 {% block base_css %}
     <style>
-    .user-profile-pic {
-        width: 50px !important;
-        height: 50px !important;
-        border-radius: 50px;
-    }
+        .user-profile-pic {
+            width: 50px !important;
+            height: 50px !important;
+            border-radius: 50px;
+        }
     </style>
 {% endblock %}
 
@@ -108,27 +108,33 @@
     <div>
         <div style="padding: 50px 100px;">
             {% for row in posts %}
-            <section class="blog-single">
-                <div class="blog">
-                    <div class="blog-img">
-                        <img src='{{ request.scheme }}://{{ request.get_host }}/media/{{ row.featured_image }}' alt="">
-                    </div>
-                    <div class="blog-content">
-                        <h2 class="blog-title"><a href="{% url 'post_detail_view' row.slug %}">{{ row.title }}</a></h2>
-                        <p class="blog-desc">{{ row.content|truncatewords:40 }}</p>
-                        <div class="blog-details">
-                            <div class="blog-author-img">
-                                <img src="{{ request.scheme }}://{{ request.get_host }}{{ row.author.profile_pic.url }}" class="user-profile-pic" alt="">
-                            </div>
-                            <div class="blog-author-details">
-                                <h4 class="blog-author-name">{{ row.author.username }}</h4>
-                                <div class="blog-author-desig">-</div>
+                <section class="blog-single">
+                    <div class="blog">
+                        <div class="blog-img">
+                            <img src='{{ request.scheme }}://{{ request.get_host }}/media/{{ row.featured_image }}'
+                                 alt="">
+                        </div>
+                        <div class="blog-content">
+                            <h2 class="blog-title"><a href="{% url 'post_detail_view' row.slug %}">{{ row.title }}</a>
+                            </h2>
+                            <p class="blog-desc">{{ row.content|truncatewords:40 }}</p>
+                            <div class="blog-details">
+                                <div class="blog-author-img">
+                                    {% if row.author and row.author.profile_pic %}
+                                        <img src="
+                                    {{ request.scheme }}://{{ request.get_host }}{{ row.author.profile_pic.url }}"
+                                             class="user-profile-pic" alt="">
+                                    {% endif %}
+                                </div>
+                                <div class="blog-author-details">
+                                    <h4 class="blog-author-name">{{ row.author.username }}</h4>
+                                    <div class="blog-author-desig">-</div>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-            </section>
-        {% endfor %}
+                </section>
+            {% endfor %}
         </div>
     </div>
 
